# bsac-cli

./: .gitignore  Cargo.toml  README  README.md  api.json
.github/workflows/: rust.yml
bsac-api-client/: Cargo.toml
bsac-api-client/.openapi-generator/: FILES
bsac-api-client/docs/: BooleanServiceResponse.md  CheckForUpdate.md  Exam.md  ExamListServiceResponse.md  ExamServiceResponse.md  ExamsApi.md  GetKtpWorksDto.md  GetLessonTasksDto.md  GetScheduleForListOfGroups.md  GetScheduleForListOfGroupsListServiceResponse.md  Group.md  Ktp.md  (+33 more)
bsac-client/: README.md
bsac_api/: Cargo.toml
bsac_api/examples/: get_group_exams.rs  get_group_schedule_for_date.rs  get_groups.rs  get_ktps.rs  get_lessons.rs  get_practices.rs  get_schedule_actuality.rs  get_schedule_additions.rs  get_schedule_for_groups.rs  get_schedule_for_teachers.rs  get_schedule_moves.rs  get_teacher_schedule_for_date.rs  get_teachers.rs  get_week.rs  get_works.rs  get_works_schedule.rs
bsac_api/src/: lib.rs
bsac_api/src/model/: boolean_service_response.rs  day_of_week.rs  education_types.rs  exam.rs  exam_list_service_response.rs  get_ktp_dto.rs  get_ktp_dto_list_service_response.rs  get_ktp_works_dto.rs  get_schedule_for_list_of_groups.rs  get_schedule_for_list_of_groups_list_service_response.rs  get_schedule_for_one_group.rs  get_schedule_for_one_group_list_service_response.rs  get_works_for_all_lessons_group_dto.rs  get_works_for_all_lessons_group_dto_list_service_response.rs  get_works_group_dto.rs  get_works_schedule_dto.rs  get_works_schedule_dto_list_service_response.rs  group.rs  group_list_service_response.rs  http_status_code.rs  int32_service_response.rs  ktp.rs  lesson.rs  lesson_schedule.rs  lesson_schedule_with_work.rs  mod.rs  practice.rs  practice_list_service_response.rs  schedule_add.rs  schedule_add_list_service_response.rs  schedule_move.rs  teacher.rs  teacher_list_service_response.rs  work.rs  work_type_enum.rs
bsac_api/src/request/: get_group_exams.rs  get_group_schedule_for_date.rs  get_groups.rs  get_ktps.rs  get_lessons.rs  get_practices.rs  get_schedule_actuality.rs  get_schedule_additions.rs  get_schedule_for_groups.rs  get_schedule_for_teachers.rs  get_schedule_moves.rs  get_teacher_schedule_for_date.rs  get_teachers.rs  get_week.rs  get_works.rs  get_works_schedule.rs  mod.rs
src/: config.rs  finder.rs  main.rs  printer.rs
(+97 files in other folders)
