[package]
name = "bsac-cli"
version = "1.1.0"
authors = ["Hlofiys"]
description = "Simple cli app to retrive colege timetable from api"
license = "GPL-3.0-only"
edition = "2021"
repository = "https://github.com/Hlofiys/bsac-cli"

[dependencies]
bsac_api = "0.1.0"
tokio = { version = "1", features = ["full"] }
tokio-macros = "=2.4.0"
colored = "2.1.0"
confy = "0.6.1"
serde_derive = "1.0.210"
serde = "1.0.210"
inquire = { version = "0.7.5", features = ["chrono", "date"] }
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["cargo"] }
