[package]
name = "bsac_api"
version = "0.1.0"
edition = "2021"
authors = ["Hlofiys"]
description = "Api lib to retrive colege timetable from api"
license = "GPL-3.0-only"
repository = "https://github.com/Hlofiys/bsac-cli"

[dependencies]
httpclient = "0.23.14"
futures = "0.3.30"
serde_json = "1.0.128"
chrono = {version = "0.4.38", features = ["serde"]}
serde = "1.0.210"
tokio = "1.40.0"

[lib]
path = "src/lib.rs"
name = "bsac_api"
doctest = false
edition = "2021"
crate-type = ["rlib"]
required-features = []